Use env vars in gitea compose

--- a/example/gitea/focker-compose.yml
+++ b/example/gitea/focker-compose.yml
@@ -18,11 +18,13 @@ jails:
       gitea-data: /var/db/gitea
     ip4.addr: 127.0.8.1
     exec.start: |
+      export IP4_ADDR=127.0.8.1 && \
+      export DOMAIN_NAME=xyz.com && \
       export GITEA_CONF=/usr/local/etc/gitea/conf/app.ini && \
       chown git:git /var/db/gitea && \
-      sed -i -e 's/127.0.0.1/127.0.8.1/g' $GITEA_CONF && \
-      sed -i -e 's/localhost/xyz.com/g' $GITEA_CONF && \
-      crudini --set --inplace $GITEA_CONF server ROOT_URL https://xyz.com && \
+      sed -i -e "s/127.0.0.1/${IP4_ADDR}/g" $GITEA_CONF && \
+      sed -i -e "s/localhost/${DOMAIN_NAME}/g" $GITEA_CONF && \
+      crudini --set --inplace $GITEA_CONF server ROOT_URL https://${DOMAIN_NAME} && \
       crudini --set --inplace $GITEA_CONF server DISABLE_SSH true && \
       export SECRET_CONF=/var/db/gitea/focker-secrets.ini && \
       if [ ! -f $SECRET_CONF ]; then
