Extra limits on settings in forked repos.

--- a/example/gitea-disable/files/nginx.conf
+++ b/example/gitea-disable/files/nginx.conf
@@ -12,14 +12,24 @@ http {
     listen 80;
 
     location / {
+      error_page 403 /403.html;
+
       rewrite ^/admin1/ $uri break;
       if ($uri ~ ^/([^/]*)/([^/]*)/(wiki|releases|issues)) {
         return 403;
       }
+      rewrite ^/([^/]*)/([^/]*)/settings/(collaboration|branches) $uri break;
+      if ($uri ~ ^/([^/]*)/([^/]*)/settings) {
+        set $test "settings";
+      }
+      if ($request_method = "POST") {
+        set $test "${test}_post";
+      }
+      if ($test = "settings_post") {
+        return 403;
+      }
 
       root /usr/local/share/gitea/public;
-
-      error_page 403 /403.html;
 
       proxy_pass http://localhost:3000/;
     }
