Disable Swagger and non-GET API as well.

--- a/example/gitea-disable/files/nginx.conf
+++ b/example/gitea-disable/files/nginx.conf
@@ -14,6 +14,9 @@ http {
     location / {
       error_page 403 /403.html;
 
+      if ($uri ~ ^/api) {
+        set $test "api";
+      }
       rewrite ^/admin1/ $uri break;
       if ($uri ~ ^/([^/]*)/([^/]*)/(wiki|releases|issues)) {
         return 403;
@@ -22,10 +25,13 @@ http {
       if ($uri ~ ^/([^/]*)/([^/]*)/settings) {
         set $test "settings";
       }
-      if ($request_method = "POST") {
-        set $test "${test}_post";
+      if ($request_method != "GET") {
+        set $test "${test}_not-get";
       }
-      if ($test = "settings_post") {
+      if ($test = "settings_not-get") {
+        return 403;
+      }
+      if ($test = "api_not-get") {
         return 403;
       }
 
