Fix for 403 on .

--- a/example/gitea-disable/files/nginx.conf
+++ b/example/gitea-disable/files/nginx.conf
@@ -14,6 +14,7 @@ http {
     location / {
       error_page 403 /403.html;
 
+      set $test "";
       if ($uri ~ ^/api) {
         set $test "api";
       }
