Relaxed access to markdown api.

--- a/example/gitea-disable/files/nginx.conf
+++ b/example/gitea-disable/files/nginx.conf
@@ -32,6 +32,8 @@ http {
       if ($test = "settings_not-get") {
         return 403;
       }
+      rewrite ^/api/v1/repos/[^/]*/[^/]*/markdown$ $uri break;
+      rewrite ^/api/v1/markdown(/raw)?$ $uri break;
       if ($test = "api_not-get") {
         return 403;
       }
