--- a/example/gateway/nginx-https/files/nginx.conf
+++ b/example/gateway/nginx-https/files/nginx.conf
@@ -12,11 +12,14 @@ http {
     server {
       listen 443 ssl;
       server_name {{ ' '.join(cookiecutter.domains[i]) }};
-      ssl_certificate /certbot-data/config/live/{{ cookiecutter.domains[i][0] }}/{{ cookiecutter.domains[i][0] }}.crt;
-      ssl_certificate_key /certbot-data/config/live/{{ cookiecutter.domains[i][0] }}/{{ cookiecutter.domains[i][0] }}.key;
+      ssl_certificate /usr/local/etc/letsencrypt/live/{{ cookiecutter.domains[i][0] }}/fullchain.pem;
+      ssl_certificate_key /usr/local/etc/letsencrypt/live/{{ cookiecutter.domains[i][0] }}/privkey.pem;
 
       location / {
-        proxy_pass http://{{ cookiecutter.ips[i] }}/;
+        proxy_pass http://{{ cookiecutter.ips[i] }};
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_request_buffering off;
       }
     }
   {% endfor %}
