Test one more fake domain

--- a/example/gitea/focker-compose.yml
+++ b/example/gitea/focker-compose.yml
@@ -20,6 +20,7 @@ jails:
       domains:
         - xyz.com
         - www.xyz.com
+        - gitea.xyz.com
     image: gitea-disable
     mounts:
       gitea-data: /var/db/gitea
