--- a/example/gateway/nginx-http/files/nginx.conf
+++ b/example/gateway/nginx-http/files/nginx.conf
@@ -14,7 +14,7 @@ http {
       server_name {{ ' '.join(cookiecutter.domains[i]) }};
 
       location /.well-known/ {
-        root /srv/certbot-webroot;
+        root /certbot/webroot;
       }
 
       location / {
